--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "bandit>=1.8.6",
+    "coverage>=7.9.2",
     "mypy>=1.17.0",
     "pytest>=8.4.1",
     "ruff>=0.12.4",
