--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiomysql>=0.2.0",
+    "passlib[bcrypt]>=1.7.4",
     "python-decouple>=3.8",
     "quart>=0.20.0",
     "sqlmodel>=0.0.24",
